syntax = "proto3";

package generated;

option go_package = "github.com/gamedb/gamedb/pkg/backend/generated";

import "shared.proto";
import "google/protobuf/timestamp.proto";

service ArticlesService {
    rpc List (ListArticlesRequest) returns (ArticlesResponse) {
    }
}

message ListArticlesRequest {
    PaginationRequest pagination = 1;
    repeated string projection = 2;
    repeated int32 ids = 3;
    repeated int32 appIds = 4;
    string feed = 5;
}

message ArticlesResponse {
    PaginationResponse pagination = 1;
    repeated ArticleResponse articles = 2;
}

message ArticleResponse {
    int64 id = 1;
    string title = 2;
    string url = 3;
    bool isExternal = 4;
    string author = 5;
    string contents = 6;
    google.protobuf.Timestamp date = 7;
    string feedLabel = 8;
    string feedName = 9;
    int32 feedType = 10;
    int32 appID = 11;
    string appName = 12;
    string appIcon = 13;
    string articleIcon = 14;
}
